<?xml version="1.0" encoding="utf-8"?>
<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="wrap_content"
     android:layout_width="match_parent">

    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:paddingBottom="16dp"
         android:paddingHorizontal="24dp"
         android:paddingTop="8dp">

        <com.google.android.material.card.MaterialCardView
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_marginBottom="16dp"
             app:cardElevation="0dp"
             app:cardBackgroundColor="?attr/colorSecondaryContainer"
             app:cardCornerRadius="8dp">

            <TextView
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:padding="12dp"
                 android:ellipsize="start"
                 android:textSize="12sp"
                 android:fontFamily="monospace"
                 android:textColor="?attr/colorOnSecondaryContainer"
                 android:singleLine="true"
                 android:id="@+id/tvProjectRoot" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:layout_marginBottom="12dp"
             android:hint="@string/module_hint_name"
             app:helperTextEnabled="true"
             app:helperText="@string/module_helper_name"
             style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
             app:errorEnabled="true"
             android:id="@+id/tilModuleName">

            <com.google.android.material.textfield.TextInputEditText
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:imeOptions="actionNext"
                 android:maxLines="1"
                 android:inputType="text"
                 android:id="@+id/etModuleName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:hint="@string/module_hint_package"
             app:helperTextEnabled="true"
             app:helperText="@string/module_helper_package"
             style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
             app:errorEnabled="true"
             android:id="@+id/tilModulePackage">

            <com.google.android.material.textfield.TextInputEditText
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:imeOptions="actionDone"
                 android:maxLines="1"
                 android:inputType="textNoSuggestions"
                 android:id="@+id/etModulePackage" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:layout_marginTop="4dp"
             android:id="@+id/box"
             android:text="using kts?" />

    </LinearLayout>

</ScrollView>